Week 6 : Write endpoints implemented with validation
